feat(api): add a `POST` endpoint to request the catalog (#2060)
* feat(api): add catalog request endpoint

* use CriterionDto, introduce CatalogRequest...transformer
